Add inputs and other functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="router.js"></script>
   <script src="store.js"></script>
   <script src="routes/posts.js"></script>
+  <script src="controllers/posts.js"></script>
   <script>
     EmberHandlebarsLoader.loadTemplates([
       'posts', 'application'
