--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <script src="libs/ember.js"></script>
   <script src="libs/ember-template-compiler-1.10.0.js"></script>
   <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
+  <script src="libs/ember-data.js"></script>
+  <script src="libs/localstorage_adapter.js"></script>
   <script src="twitter.js"></script>
   <script src="router.js"></script>
   <script src="store.js"></script>
   <script src="routes/posts.js"></script>
   <script src="controllers/posts.js"></script>
+  <script src="models/post.js"></script>
   <script>
     EmberHandlebarsLoader.loadTemplates([
       'posts', 'application'
@@ -23,8 +26,6 @@
 </head>
 
 <body>
-  <div class='container'>
-    <h1>Twitter</h1>
-  </div>
+
 </body>
 </html>
