Add reply functionality

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
   <script src="router.js"></script>
   <script src="store.js"></script>
   <script src="routes/posts.js"></script>
+  <script src="routes/replies.js"></script>
+  <script src="controllers/post.js"></script>
   <script src="controllers/posts.js"></script>
+  <script src="controllers/replies.js"></script>
   <script src="models/post.js"></script>
+  <script src="models/reply.js"></script>
   <script>
     EmberHandlebarsLoader.loadTemplates([
-      'posts', 'application'
+      'posts', 'application', 'replies'
       ]);
   </script>
 </head>
